[gd_scene load_steps=5 format=3 uid="uid://b2cgh0148edku"]

[ext_resource type="Texture2D" uid="uid://caprt6bkrjuiw" path="res://hud/hud-spritesheet.png" id="1_ckri1"]
[ext_resource type="Script" uid="uid://ddj3xob5y2ibp" path="res://hud/weapon_hotbar_item.gd" id="1_v6dge"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w3a4q"]
bg_color = Color(0.6, 0.6, 0.6, 0.0784314)
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.6, 0.6, 0.6, 0.117647)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="AtlasTexture" id="AtlasTexture_ymgn8"]
atlas = ExtResource("1_ckri1")
region = Rect2(0, 0, 16, 16)

[node name="WeaponHotbarItem" type="PanelContainer"]
theme_override_styles/panel = SubResource("StyleBoxFlat_w3a4q")
script = ExtResource("1_v6dge")

[node name="RevolverMargin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 4

[node name="RevolverHBox" type="HBoxContainer" parent="RevolverMargin"]
layout_mode = 2
alignment = 1

[node name="NumLabel" type="Label" parent="RevolverMargin/RevolverHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "%
"

[node name="IconRect" type="TextureRect" parent="RevolverMargin/RevolverHBox"]
unique_name_in_owner = true
layout_mode = 2
texture = SubResource("AtlasTexture_ymgn8")
